--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -112,10 +112,9 @@ Forests are vertically and horizontally stratified, with trees of different size
 The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions[@senfCanopyMortalityHas2018a].
 Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to increased sensitivity of overstory to variability in water and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. Evidence shows that larger trees suffer hydraulic stress during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to increase [@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of water enables canopies with suitable foliar traits to remain cool through continues evapotranspiration and consequential buffering of the understory [REF]  
 
-While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming [@bertrandCommentForestMicroclimate2020]. As a result, understories experience a different set of microclimatic pressures with rising temperature in combination with conditions of limited light and related foliar traits, inter-species resource competition etc.. [@niinemetsResponsesForestTrees2010a; @bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and growth, even around 1 degree of warming can lead to changes in plant species composition and growth [@bertrandChangesPlantCommunity2011; @bertrandCommentForestMicroclimate2020]. Tree-ring evidence shows reduced growth of understory trees relative to overstory with warming temperatures, in mesic temperate forests[@rollinsonClimateSensitivityUnderstory, 2020], along with other studies that show thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@duqueThermophilizationAdultJuvenile2015; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering continued frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [@niinemetsControversyTraitsConferring2006] which may have further impacts on understory species with rising temperatures. 
+While forest microclimates are insulated from macroclimatic extremes, they are still experiencing warming trends [@bertrandCommentForestMicroclimate2020]. As a result, understories experience a distinct set of pressures as microclimatic warming combines with conditions of limited light and related foliar traits, inter-species resource competition, etc. [@niinemetsResponsesForestTrees2010a; @bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and performance, even around 1 degree of warming can lead to changes in plant species composition and growth [@bertrandChangesPlantCommunity2011; @bertrandCommentForestMicroclimate2020]. Plant communities in forest microclimates are already undergoing thermophilization [@duqueThermophilizationAdultJuvenile2015; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. Tree-ring evidence in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. In addition, understory growth phenology is sensitive to warming year round, and especially in spring [Zohnner_Renner 2019]. 
 
-Microclimate warming has implications for forest regeneration[@vonarxSpatiotemporalEffectsForest2012a] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [@mcdowellPervasiveShiftsForest2020].
-Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
+Microclimate warming has implications for forest regeneration [@vonarxSpatiotemporalEffectsForest2012a]. Temperature driven photosynthesis limitation is reducing tree growth rates, accompanying a global trend towards disturbed forests with younger trees [@mcdowellPervasiveShiftsForest2020]. Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
 
 While there is evidence for temperature driven shifts in forest dynamics, leaf-level metabolic and performance changes influenced by biophysical conditions and warming in overstory and understory is still unclear. Thus, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy influenced by biophysical environmental gradient.This will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions [with additional feedbacks to forest structure and microclimates].
 
@@ -243,28 +242,22 @@ However vertical climate gradients within forests are known to be steeper than t
 ## Trait variation 
 
 
-Leaf traits are shaped on the basis of light and height in forest vertical strata, and show different degrees of foliar plasticity in accordance with the intensity and availability of light. After the formation of leaves to integrated light, it takes 30-60 days for traits to stabalize in woody species [@niinemetsLeafAgeDependent2016a]. A network of phytohormones in leaves perceive the intensity of light falling on the surface and thus respond through receptors that enable acclimation or avoidance depending on the light scenario [Casal, 2013]. As a result, degrees of high irradiance gives rise to variations of sun-leaf morphology compared to degrees of low irradiance-- characterized by shade-- shapes variations of shade-leaf morphology [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006], which ultimately also shapes leaf structural, chemical and physiological traits as well [Keenan and Niinemets et al. 2016]. Increasing number of studies point towards the importance for incorporating sun and shade in modelling leaf economic spectrum (LES) within-canopy gradient[@chenLeafEconomicsSpectrum2020a] because LES was 'built' using mainly sun (upper canopy) leaves; given the vastly different light environments at the bottom of the canopy (and that most leaves in the canopy are likely to be shade leaves) there is a strong research need to better characterise trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in simplified cateogorization of 'sun' and 'shade' leaves due to variation based on intensities of light within-canopy, across functional groups, in canopy gaps, height and ontogeny [@ishiiVariationIntracrownLeaf2018; @niinemetsWorldwideAnalysisWithincanopy2015] as well as geographically [@ishiiVariationIntracrownLeaf2018].
+Leaf traits are shaped on the basis of light and height and show different degrees of foliar plasticity in accordance with the intensity and availability of light which also optimize water uptake, heat and C uptake by leaves in forest vertical strata. After the formation of leaves to integrated light, it takes 30-60 days for traits to stabalize in woody and herbaceous species [@niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves such as phytochromes among others mediate response to PAR, and ratio of red to far red radiation [R:FR] falling on the surface. This enables acclimation or avoidance response through development of necessary traits [Casal, 2013]. As a result, degrees of high irradiance gives rise to variations of sun-leaf traits  compared to degrees of low irradiance-- characterized by shade-- shapes variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006], which ultimately also shapes leaf structural, chemical and physiological traits as well [Keenan and Niinemets et al. 2016]. 
+
+Increasing number of studies point towards the importance for incorporating sun and shade in modelling leaf economic spectrum (LES) within-canopy gradient[@chenLeafEconomicsSpectrum2020a] because LES was 'built' using mainly sun (upper canopy) leaves; given the vastly different light environments at the bottom of the canopy (and that most leaves in the canopy are likely to be shade leaves) there is a strong research need to better characterise trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in simplified cateogorization of 'sun' and 'shade' leaves due to variation based on light within-canopy, across functional groups, in canopy gaps, height and ontogeny [@ishiiVariationIntracrownLeaf2018; @niinemetsWorldwideAnalysisWithincanopy2015] as well as geographically [@ishiiVariationIntracrownLeaf2018]. Classification for sun and shade tolerance rankings have been highted by multiple studies [Baker 1949; @niinemetsControversyTraitsConferring2006; Feng et al. 2018] such as from @niinemetsControversyTraitsConferring2006 are as follows: "The five-level scale used for shade tolerance (1,very intolerant; 2, intolerant; 3, moderately tolerant; 4,tolerant; 5, very tolerant) corresponds approximately to the following light availabilities expressed as percentage of full sunlight: 1,>50%; 2, 25-50%; 3, 10-25%; 4, 5-10%; 5, 2-5%". "Additionally, shade leaves in the understory are of three categories; 1. shade leaves of canopy trees--top of the tree is sun exposed, bottom is shaded. 2. seedlings/saplings of canopy trees that will eventually, if they survive, reach the canopy. 3 understory plants that complete their lifecycle in the shaded understory. These groups are likely to have different traits, and if we expect'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on the category of shade plants being considered".[refs, -Martijn Slot]
 
 
 **Inter-species vertical gradient leaf trait variation**
 
-Taller trees in dense forests tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory. As a result the combination of stressors taller trees with foliage exposed to greater PAR and $VPD$ experience are different from the combination of stressors experienced by understory shorter trees with shaded/semi-shaded leaves [@niinemetsResponsesForestTrees2010a] 
-"Spending their lifecycle in the shade means they have different pressures [such as competition for light or adapting leaf traits to maximize light capture and use efficiency] than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well."[-Martijn]
+Taller trees in dense forests tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory. As a result, sun and shade leaf trait dichotomy has been established across species by various studies where typical sun leaves are often smaller in size and width, thicker, hairier, with thicker cuticle and more lobated than shade leaves
+[Mathur et al. 2018]. However, the combination of stressors taller trees' foliage experience are different from the combination of stressors understory shorter trees's foliage experience. For example, overstory sun leaves experience greater loads of PAR, $VPD$, elevated temperatures, wind speed, etc. whereas for understory--shade or limitation of light, niche competition, herbivory etc. These pressures also contribute to the development of necessary traits that is primarily mediated by light response.Leaves act as windows to plant performance enhacing plant adaptation to changing environment, thus traits acclimated to prior stressors have been suggested to enable whole plant to respond differently to forcoming stress [@niinemetsResponsesForestTrees2010a]
 
-Cateogorization of sun and shade tolerance from @niinemetsControversyTraitsConferring2006 are as follows: "The five-level scale used for shade tolerance (1,very intolerant; 2, intolerant; 3, moderately tolerant; 4,tolerant; 5, very tolerant) corresponds approximately to the following light availabilities expressed as percentage of full sunlight: 1,>50%; 2, 25-50%; 3, 10-25%; 4, 5-10%; 5, 2-5%". 
+"Spending their lifecycle in the shade means they have different pressures than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well."[-Martijn].  [@niinemetsResponsesForestTrees2010a]. 
+Under conditions of low light, understory species may have conservative  growth strategies because they are resource (light) limited which leads to insuffiencient production of ATP for carbon fixation and carbohydrate synthesis [Mathur et al. 2018]. Canopy foliar traits will be different from shade leaves of canopy trees as well. E.g.They tend to have long-lived leaves with high LMA while shade leaves of canopy trees have large leaves with low LMA. Those differences in traits are likely to affect their thermal properties as well.
 
-"Additionally, shade leaves in the understory are of three categories; 1. shade leaves of canopy trees--top of the tree is sun exposed, bottom is shaded. 2. seedlings/saplings of canopy trees that will eventually, if they survive, reach the canopy. 3 understory plants that complete their lifecycle in the shaded understory. These groups are likely to have different traits, and if we expect'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on the category of shade plants being considered".[refs, -Martijn Slot]
+However, even with distinct features of sun and shade traits, trait adaptation to light is done in such a way where light use efficiency for photosynthesis is maximized at both high or low light. In light limited conditions, shade leaves increase light capture efficiency through increasing their specific leaf area [SLA] and by investing in chlorophyll at a mass basis--"leads to a similar chlorphyll content on an area basis compared with sun leaves. This makes shade leaves realize a similar light capture to sun leaves at a lower biomass investment" [Chazdon et al. 1996, Poorter et al. 2000, Rozendaal et al. 2006]
 
-Leaf traits have been observed to exhibit greater plasticity on the basis of area than mass 
-within-canopy and across inter-canopies [Keenan and Niinemetes, 2016]
-
-**Inter-species ontogeny and height leaf trait variation**
-
-The variation and quanitity of light falling on leaves is perceived through a network of phytohormones that regulate leaf acclimation to light conditions and consequential strategies to regulate growth and traits. Under conditions of low light, understory species may have conservative  growth strategies because they are resource (light) limited which leads to insuffiencient production of ATP for carbon fixation and carbohydrate synthesis[Mathur et al. 2018].
-
-Additionally, increased exposure to light increases carbon reserve, plant height, foliage robustness,  while also increasing evapotranspiration, decreasing hydraulic conductivity, increasing chances of photoinhibition in leaves should water availbility become limited, however with available water overall sensitivity to stress decreases. Understory shaded/younger trees have comparitively less carbon reserve due to light limitation as a primary stressor [which differs among shade-tolerant/intolerant], decreased plant biomass, increased leaf biomass, and decreased evapotransition demands, with greater overall sensitivitty to stress. Larger carbon reserves in trees with greater light and water availability allows them to tolerate greater number of stressors compared to understory/younger trees that are able to tolerate only a fewer stressors making them overall more sensitive to stress [such as temperature]. Thus, overall stress sensitivity decreases with increasing height, light and age.[@niinemetsResponsesForestTrees2010a]
-Their traits will be different from shade leaves of canopy trees as well. E.g.
-They tend to have long-lived leaves with high LMA while shade leaves of canopy trees have large leaves with low LMA. Those differences in traits are likely to affect their thermal properties as well.
+With increasing height and age, competion for light decreases as availibity  of light increases in dense forests. However, depending on growth strategies of species occupying the understory, leaf traits might differ due to species inherent light requirements. Early successional species are considered more shade intolerant than late successional species that are more shade tolerant. Ontogenic differences between the two in the understory suggests lower leaf dry mass per area ($M_A$) in shade tolerators than in intolerators, greater photosynthetic capacity in low light and greater carbon gain capacities[Niinemets, 2006].Rozendaal et al. 2006 has more info about this.   
 
 **Intra-canopy on the same species leaf trait variation**
 
@@ -288,8 +281,8 @@ nocite: |
 ---
 
 Are traits shaped more by height or light?
--	 “Height is more important than light in determining leaf morphology in a tropical forest” (Cavaleri et al. 2010)
-- 	(Cavaleri et al. 2008) 
+Height is more important than light in determining leaf morphology in a tropical forests (Cavaleri et al. 2010)
+- (Cavaleri et al. 2008) 
 - from Martijn: "If I remember correctly, height and light exposure are closely correlated and things like LMA scale with both, but above a certain level of light exposure, the effect of additional light disappears, while the relationship of the morphological traits with height continues. I have often been a bit skeptical about assuming height drives morphology, as most of the work that convincingly shows that (and relates it to turgor pressure for example) is from 100 m tall redwoods."
 -"Our study suggests that height plays an important role in the leaf traits, in contrast with previous findings (Baranski, 1975; Sack et al., 2006).In Quercus. alba and Quercus. velutina, loba-tion decreased with increasing tree height. Lobation allows air passage and light penetration in the tree canopy (Sack et al., 2006; Semchenko & Zobel, 2007)" [@kusiPlasticLeafMorphology2020]
 
@@ -450,6 +443,10 @@ Similarly, our previously unpublished analysis shows that in a broadleaf deciduo
 This pattern is initially counter-intuitive in that sun-exposed leaves can experience greater elevation of $T_{leaf}$ over $T_{air}$ than shade leaves (Fig. **3?**). 
 However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. **3**).
 It is also possible that competition is accelerated under warmer temperatures.
+
+Additionally, increased exposure to light increases non structural carbon reserve (NSC), plant height, foliage robustness,  while also increasing evapotranspiration, decreasing hydraulic conductivity, increasing chances of photoinhibition in leaves should water availbility become limited, however with available water overall sensitivity to stress decreases. Understory shaded/younger trees have comparitively less NSC reserve due to light limitation as a primary stressor [which differs among shade-tolerant/intolerant], decreased plant biomass, increased leaf biomass, and decreased evapotransition demands, as well as greater investment in light harvesting than in photosynthesis--with greater overall sensitivity to stress and reduced tolerance. Larger NSC reserves in trees with greater light and water availability allows them to tolerate greater number of stressors compared to understory/younger trees that are able to tolerate only a fewer stressors making them overall more sensitive to stress [such as temperature]. Thus, overall stress sensitivity decreases and tolerance increases with increasing height, light and age.[@niinemetsResponsesForestTrees2010a]
+
+Interaction between degrees of shade x ontogeny x height with rising temperature needs more scietific attention because a huge part of understory vegetation lies within variations of light and shade spatio-temporal gradient. 
 
 ![**Figure 4. Temperature sensitivity of tree growth (derived from tree rings) for understory versus canopy trees.** THIS IS A ROUGH PLACEHOLDER-- KAT WILL PLAY WITH POTENTIAL VERSIONS. IF OUR IN-PREP TREE RING ANALYSIS METHODS PAPER IS ACCEPTED AHEAD OF THIS, WE CAN HIGHLIGHT RESULTS FROM THAT, WHICH ARE MORE RELIABLE. Analysis methods described in Appendix S4. OUTLIER HERE IS SHADE-TOLERANT BEECH. Data from Helcoski et al. 2019.](SCBI_tree_rings/SCBIfig.png)
 
